src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    BY
    GROUP


State 78 conflicts: 4 shift/reduce
State 79 conflicts: 4 shift/reduce
State 80 conflicts: 4 shift/reduce
State 81 conflicts: 4 shift/reduce
State 82 conflicts: 4 shift/reduce


Grammar

    0 $accept: commands $end

    1 commands: command_wrapper opt_semicolon

    2 command_wrapper: calc_stmt
    3                | select_stmt
    4                | insert_stmt
    5                | update_stmt
    6                | delete_stmt
    7                | create_table_stmt
    8                | drop_table_stmt
    9                | show_tables_stmt
   10                | desc_table_stmt
   11                | create_index_stmt
   12                | drop_index_stmt
   13                | sync_stmt
   14                | begin_stmt
   15                | commit_stmt
   16                | rollback_stmt
   17                | load_data_stmt
   18                | explain_stmt
   19                | set_variable_stmt
   20                | help_stmt
   21                | exit_stmt

   22 exit_stmt: EXIT

   23 help_stmt: HELP

   24 sync_stmt: SYNC

   25 begin_stmt: TRX_BEGIN

   26 commit_stmt: TRX_COMMIT

   27 rollback_stmt: TRX_ROLLBACK

   28 drop_table_stmt: DROP TABLE ID

   29 show_tables_stmt: SHOW TABLES

   30 desc_table_stmt: DESC ID

   31 create_index_stmt: CREATE INDEX ID ON ID LBRACE ID RBRACE

   32 drop_index_stmt: DROP INDEX ID ON ID

   33 create_table_stmt: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format

   34 attr_def_list: ε
   35              | COMMA attr_def attr_def_list

   36 attr_def: ID type LBRACE number RBRACE null_able
   37         | ID type

   38 number: NUMBER

   39 type: INT_T
   40     | STRING_T
   41     | FLOAT_T
   42     | VECTOR_T
   43     | DATE_T

   44 null_able: ε
   45          | NULLABLE
   46          | NOT NULL

   47 insert_stmt: INSERT INTO ID VALUES LBRACE value value_list RBRACE

   48 value_list: ε
   49           | COMMA value value_list

   50 value: NUMBER
   51      | '-' NUMBER
   52      | FLOAT
   53      | '-' FLOAT
   54      | SSS
   55      | NULL

   56 storage_format: ε
   57               | STORAGE FORMAT EQ ID

   58 delete_stmt: DELETE FROM ID where

   59 update_stmt: UPDATE ID SET ID EQ value where

   60 select_stmt: SELECT expression_list FROM rel_list where group_by
   61            | SELECT expression_list

   62 calc_stmt: CALC expression_list

   63 expression_list: expression
   64                | expression COMMA expression_list

   65 expression: expression '+' expression
   66           | expression '-' expression
   67           | expression '*' expression
   68           | expression '/' expression
   69           | LBRACE expression RBRACE
   70           | '-' expression
   71           | expr_value
   72           | rel_attr
   73           | '*'
   74           | MAX expression
   75           | MIN expression
   76           | AVG expression
   77           | COUNT expression
   78           | SUM expression

   79 expr_value: NUMBER
   80           | FLOAT
   81           | SSS
   82           | NULL

   83 rel_attr: ID
   84         | ID DOT ID

   85 relation: ID

   86 rel_list: relation
   87         | relation COMMA rel_list
   88         | rel_list INNER JOIN relation ON on_condition_list

   89 on_condition_list: ε
   90                  | on_condition
   91                  | on_condition AND on_condition_list

   92 on_condition: rel_attr comp_op value
   93             | value comp_op value
   94             | rel_attr comp_op rel_attr
   95             | value comp_op rel_attr

   96 where: ε
   97      | WHERE condition_list

   98 condition_list: ε
   99               | condition
  100               | condition AND condition_list

  101 condition: expression comp_op expression
  102          | expression like_op expression

  103 comp_op: EQ
  104        | LT
  105        | GT
  106        | LE
  107        | GE
  108        | NE

  109 like_op: LIKE
  110        | NOT LIKE

  111 group_by: ε

  112 load_data_stmt: LOAD DATA INFILE SSS INTO TABLE ID

  113 explain_stmt: EXPLAIN command_wrapper

  114 set_variable_stmt: SET ID EQ value

  115 opt_semicolon: ε
  116              | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 67 73
    '+' (43) 65
    '-' (45) 51 53 66 70
    '/' (47) 68
    error (256)
    SEMICOLON (258) 116
    BY (259)
    CREATE (260) 31 33
    DROP (261) 28 32
    GROUP (262)
    TABLE (263) 28 33 112
    TABLES (264) 29
    INDEX (265) 31 32
    CALC (266) 62
    SELECT (267) 60 61
    DESC (268) 30
    SHOW (269) 29
    SYNC (270) 24
    INSERT (271) 47
    DELETE (272) 58
    UPDATE (273) 59
    MAX (274) 74
    MIN (275) 75
    AVG (276) 76
    COUNT (277) 77
    SUM (278) 78
    LBRACE (279) 31 33 36 47 69
    RBRACE (280) 31 33 36 47 69
    COMMA (281) 35 49 64 87
    TRX_BEGIN (282) 25
    TRX_COMMIT (283) 26
    TRX_ROLLBACK (284) 27
    INT_T (285) 39
    STRING_T (286) 40
    DATE_T (287) 43
    FLOAT_T (288) 41
    VECTOR_T (289) 42
    NULL (290) 46 55 82
    NULLABLE (291) 45
    HELP (292) 23
    EXIT (293) 22
    DOT (294) 84
    INTO (295) 47 112
    VALUES (296) 47
    FROM (297) 58 60
    INNER (298) 88
    JOIN (299) 88
    WHERE (300) 97
    AND (301) 91 100
    NOT (302) 46 110
    LIKE (303) 109 110
    SET (304) 59 114
    ON (305) 31 32 88
    LOAD (306) 112
    DATA (307) 112
    INFILE (308) 112
    EXPLAIN (309) 113
    STORAGE (310) 57
    FORMAT (311) 57
    EQ (312) 57 59 103 114
    LT (313) 104
    GT (314) 105
    LE (315) 106
    GE (316) 107
    NE (317) 108
    NUMBER <number> (318) 38 50 51 79
    FLOAT <floats> (319) 52 53 80
    ID <string> (320) 28 30 31 32 33 36 37 47 57 58 59 83 84 85 112 114
    SSS <string> (321) 54 81 112
    UMINUS (322)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    commands <sql_node> (73)
        on left: 1
        on right: 0
    command_wrapper <sql_node> (74)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 113
    exit_stmt <sql_node> (75)
        on left: 22
        on right: 21
    help_stmt <sql_node> (76)
        on left: 23
        on right: 20
    sync_stmt <sql_node> (77)
        on left: 24
        on right: 13
    begin_stmt <sql_node> (78)
        on left: 25
        on right: 14
    commit_stmt <sql_node> (79)
        on left: 26
        on right: 15
    rollback_stmt <sql_node> (80)
        on left: 27
        on right: 16
    drop_table_stmt <sql_node> (81)
        on left: 28
        on right: 8
    show_tables_stmt <sql_node> (82)
        on left: 29
        on right: 9
    desc_table_stmt <sql_node> (83)
        on left: 30
        on right: 10
    create_index_stmt <sql_node> (84)
        on left: 31
        on right: 11
    drop_index_stmt <sql_node> (85)
        on left: 32
        on right: 12
    create_table_stmt <sql_node> (86)
        on left: 33
        on right: 7
    attr_def_list <attr_infos> (87)
        on left: 34 35
        on right: 33 35
    attr_def <attr_info> (88)
        on left: 36 37
        on right: 33 35
    number <number> (89)
        on left: 38
        on right: 36
    type <number> (90)
        on left: 39 40 41 42 43
        on right: 36 37
    null_able <null_able> (91)
        on left: 44 45 46
        on right: 36
    insert_stmt <sql_node> (92)
        on left: 47
        on right: 4
    value_list <value_list> (93)
        on left: 48 49
        on right: 47 49
    value <value> (94)
        on left: 50 51 52 53 54 55
        on right: 47 49 59 92 93 95 114
    storage_format <string> (95)
        on left: 56 57
        on right: 33
    delete_stmt <sql_node> (96)
        on left: 58
        on right: 6
    update_stmt <sql_node> (97)
        on left: 59
        on right: 5
    select_stmt <sql_node> (98)
        on left: 60 61
        on right: 3
    calc_stmt <sql_node> (99)
        on left: 62
        on right: 2
    expression_list <expression_list> (100)
        on left: 63 64
        on right: 60 61 62 64
    expression <expression> (101)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 63 64 65 66 67 68 69 70 74 75 76 77 78 101 102
    expr_value <expr_value> (102)
        on left: 79 80 81 82
        on right: 71
    rel_attr <rel_attr> (103)
        on left: 83 84
        on right: 72 92 94 95
    relation <relation> (104)
        on left: 85
        on right: 86 87 88
    rel_list <relation_list> (105)
        on left: 86 87 88
        on right: 60 87 88
    on_condition_list <on_condition_list> (106)
        on left: 89 90 91
        on right: 88 91
    on_condition <on_condition> (107)
        on left: 92 93 94 95
        on right: 90 91
    where <condition_list> (108)
        on left: 96 97
        on right: 58 59 60
    condition_list <condition_list> (109)
        on left: 98 99 100
        on right: 97 100
    condition <condition> (110)
        on left: 101 102
        on right: 99 100
    comp_op <comp> (111)
        on left: 103 104 105 106 107 108
        on right: 92 93 94 95 101
    like_op <comp> (112)
        on left: 109 110
        on right: 102
    group_by <expression_list> (113)
        on left: 111
        on right: 60
    load_data_stmt <sql_node> (114)
        on left: 112
        on right: 17
    explain_stmt <sql_node> (115)
        on left: 113
        on right: 18
    set_variable_stmt <sql_node> (116)
        on left: 114
        on right: 19
    opt_semicolon (117)
        on left: 115 116
        on right: 1


State 0

    0 $accept: • commands $end

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    commands           go to state 19
    command_wrapper    go to state 20
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 1

   31 create_index_stmt: CREATE • INDEX ID ON ID LBRACE ID RBRACE
   33 create_table_stmt: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE storage_format

    TABLE  shift, and go to state 41
    INDEX  shift, and go to state 42


State 2

   28 drop_table_stmt: DROP • TABLE ID
   32 drop_index_stmt: DROP • INDEX ID ON ID

    TABLE  shift, and go to state 43
    INDEX  shift, and go to state 44


State 3

   62 calc_stmt: CALC • expression_list

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression_list  go to state 58
    expression       go to state 59
    expr_value       go to state 60
    rel_attr         go to state 61


State 4

   60 select_stmt: SELECT • expression_list FROM rel_list where group_by
   61            | SELECT • expression_list

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression_list  go to state 62
    expression       go to state 59
    expr_value       go to state 60
    rel_attr         go to state 61


State 5

   30 desc_table_stmt: DESC • ID

    ID  shift, and go to state 63


State 6

   29 show_tables_stmt: SHOW • TABLES

    TABLES  shift, and go to state 64


State 7

   24 sync_stmt: SYNC •

    $default  reduce using rule 24 (sync_stmt)


State 8

   47 insert_stmt: INSERT • INTO ID VALUES LBRACE value value_list RBRACE

    INTO  shift, and go to state 65


State 9

   58 delete_stmt: DELETE • FROM ID where

    FROM  shift, and go to state 66


State 10

   59 update_stmt: UPDATE • ID SET ID EQ value where

    ID  shift, and go to state 67


State 11

   25 begin_stmt: TRX_BEGIN •

    $default  reduce using rule 25 (begin_stmt)


State 12

   26 commit_stmt: TRX_COMMIT •

    $default  reduce using rule 26 (commit_stmt)


State 13

   27 rollback_stmt: TRX_ROLLBACK •

    $default  reduce using rule 27 (rollback_stmt)


State 14

   23 help_stmt: HELP •

    $default  reduce using rule 23 (help_stmt)


State 15

   22 exit_stmt: EXIT •

    $default  reduce using rule 22 (exit_stmt)


State 16

  114 set_variable_stmt: SET • ID EQ value

    ID  shift, and go to state 68


State 17

  112 load_data_stmt: LOAD • DATA INFILE SSS INTO TABLE ID

    DATA  shift, and go to state 69


State 18

  113 explain_stmt: EXPLAIN • command_wrapper

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    command_wrapper    go to state 70
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 19

    0 $accept: commands • $end

    $end  shift, and go to state 71


State 20

    1 commands: command_wrapper • opt_semicolon

    SEMICOLON  shift, and go to state 72

    $default  reduce using rule 115 (opt_semicolon)

    opt_semicolon  go to state 73


State 21

   21 command_wrapper: exit_stmt •

    $default  reduce using rule 21 (command_wrapper)


State 22

   20 command_wrapper: help_stmt •

    $default  reduce using rule 20 (command_wrapper)


State 23

   13 command_wrapper: sync_stmt •

    $default  reduce using rule 13 (command_wrapper)


State 24

   14 command_wrapper: begin_stmt •

    $default  reduce using rule 14 (command_wrapper)


State 25

   15 command_wrapper: commit_stmt •

    $default  reduce using rule 15 (command_wrapper)


State 26

   16 command_wrapper: rollback_stmt •

    $default  reduce using rule 16 (command_wrapper)


State 27

    8 command_wrapper: drop_table_stmt •

    $default  reduce using rule 8 (command_wrapper)


State 28

    9 command_wrapper: show_tables_stmt •

    $default  reduce using rule 9 (command_wrapper)


State 29

   10 command_wrapper: desc_table_stmt •

    $default  reduce using rule 10 (command_wrapper)


State 30

   11 command_wrapper: create_index_stmt •

    $default  reduce using rule 11 (command_wrapper)


State 31

   12 command_wrapper: drop_index_stmt •

    $default  reduce using rule 12 (command_wrapper)


State 32

    7 command_wrapper: create_table_stmt •

    $default  reduce using rule 7 (command_wrapper)


State 33

    4 command_wrapper: insert_stmt •

    $default  reduce using rule 4 (command_wrapper)


State 34

    6 command_wrapper: delete_stmt •

    $default  reduce using rule 6 (command_wrapper)


State 35

    5 command_wrapper: update_stmt •

    $default  reduce using rule 5 (command_wrapper)


State 36

    3 command_wrapper: select_stmt •

    $default  reduce using rule 3 (command_wrapper)


State 37

    2 command_wrapper: calc_stmt •

    $default  reduce using rule 2 (command_wrapper)


State 38

   17 command_wrapper: load_data_stmt •

    $default  reduce using rule 17 (command_wrapper)


State 39

   18 command_wrapper: explain_stmt •

    $default  reduce using rule 18 (command_wrapper)


State 40

   19 command_wrapper: set_variable_stmt •

    $default  reduce using rule 19 (command_wrapper)


State 41

   33 create_table_stmt: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE storage_format

    ID  shift, and go to state 74


State 42

   31 create_index_stmt: CREATE INDEX • ID ON ID LBRACE ID RBRACE

    ID  shift, and go to state 75


State 43

   28 drop_table_stmt: DROP TABLE • ID

    ID  shift, and go to state 76


State 44

   32 drop_index_stmt: DROP INDEX • ID ON ID

    ID  shift, and go to state 77


State 45

   74 expression: MAX • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 78
    expr_value  go to state 60
    rel_attr    go to state 61


State 46

   75 expression: MIN • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 79
    expr_value  go to state 60
    rel_attr    go to state 61


State 47

   76 expression: AVG • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 80
    expr_value  go to state 60
    rel_attr    go to state 61


State 48

   77 expression: COUNT • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 81
    expr_value  go to state 60
    rel_attr    go to state 61


State 49

   78 expression: SUM • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 82
    expr_value  go to state 60
    rel_attr    go to state 61


State 50

   69 expression: LBRACE • expression RBRACE

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 83
    expr_value  go to state 60
    rel_attr    go to state 61


State 51

   82 expr_value: NULL •

    $default  reduce using rule 82 (expr_value)


State 52

   79 expr_value: NUMBER •

    $default  reduce using rule 79 (expr_value)


State 53

   80 expr_value: FLOAT •

    $default  reduce using rule 80 (expr_value)


State 54

   83 rel_attr: ID •
   84         | ID • DOT ID

    DOT  shift, and go to state 84

    $default  reduce using rule 83 (rel_attr)


State 55

   81 expr_value: SSS •

    $default  reduce using rule 81 (expr_value)


State 56

   70 expression: '-' • expression

    MAX     shift, and go to state 45
    MIN     shift, and go to state 46
    AVG     shift, and go to state 47
    COUNT   shift, and go to state 48
    SUM     shift, and go to state 49
    LBRACE  shift, and go to state 50
    NULL    shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 57

    expression  go to state 85
    expr_value  go to state 60
    rel_attr    go to state 61


State 57

   73 expression: '*' •

    $default  reduce using rule 73 (expression)


State 58

   62 calc_stmt: CALC expression_list •

    $default  reduce using rule 62 (calc_stmt)


State 59

   63 expression_list: expression •
   64                | expression • COMMA expression_list
   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression

    COMMA  shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90

    $default  reduce using rule 63 (expression_list)


State 60

   71 expression: expr_value •

    $default  reduce using rule 71 (expression)


State 61

   72 expression: rel_attr •

    $default  reduce using rule 72 (expression)


State 62

   60 select_stmt: SELECT expression_list • FROM rel_list where group_by
   61            | SELECT expression_list •

    FROM  shift, and go to state 91

    $default  reduce using rule 61 (select_stmt)


State 63

   30 desc_table_stmt: DESC ID •

    $default  reduce using rule 30 (desc_table_stmt)


State 64

   29 show_tables_stmt: SHOW TABLES •

    $default  reduce using rule 29 (show_tables_stmt)


State 65

   47 insert_stmt: INSERT INTO • ID VALUES LBRACE value value_list RBRACE

    ID  shift, and go to state 92


State 66

   58 delete_stmt: DELETE FROM • ID where

    ID  shift, and go to state 93


State 67

   59 update_stmt: UPDATE ID • SET ID EQ value where

    SET  shift, and go to state 94


State 68

  114 set_variable_stmt: SET ID • EQ value

    EQ  shift, and go to state 95


State 69

  112 load_data_stmt: LOAD DATA • INFILE SSS INTO TABLE ID

    INFILE  shift, and go to state 96


State 70

  113 explain_stmt: EXPLAIN command_wrapper •

    $default  reduce using rule 113 (explain_stmt)


State 71

    0 $accept: commands $end •

    $default  accept


State 72

  116 opt_semicolon: SEMICOLON •

    $default  reduce using rule 116 (opt_semicolon)


State 73

    1 commands: command_wrapper opt_semicolon •

    $default  reduce using rule 1 (commands)


State 74

   33 create_table_stmt: CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE storage_format

    LBRACE  shift, and go to state 97


State 75

   31 create_index_stmt: CREATE INDEX ID • ON ID LBRACE ID RBRACE

    ON  shift, and go to state 98


State 76

   28 drop_table_stmt: DROP TABLE ID •

    $default  reduce using rule 28 (drop_table_stmt)


State 77

   32 drop_index_stmt: DROP INDEX ID • ON ID

    ON  shift, and go to state 99


State 78

   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression
   74           | MAX expression •

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    '+'       [reduce using rule 74 (expression)]
    '-'       [reduce using rule 74 (expression)]
    '*'       [reduce using rule 74 (expression)]
    '/'       [reduce using rule 74 (expression)]
    $default  reduce using rule 74 (expression)

    shift/reduce conflict on token '+':
       74 expression: MAX expression •
       65 expression: expression • '+' expression
      Example: MAX expression • '+' expression
      Shift derivation
        expression
        ↳ 74: MAX expression
                  ↳ 65: expression • '+' expression
      Reduce derivation
        expression
        ↳ 65: expression             '+' expression
              ↳ 74: MAX expression •

    shift/reduce conflict on token '-':
       74 expression: MAX expression •
       66 expression: expression • '-' expression
      Example: MAX expression • '-' expression
      Shift derivation
        expression
        ↳ 74: MAX expression
                  ↳ 66: expression • '-' expression
      Reduce derivation
        expression
        ↳ 66: expression             '-' expression
              ↳ 74: MAX expression •

    shift/reduce conflict on token '*':
       74 expression: MAX expression •
       67 expression: expression • '*' expression
      Example: MAX expression • '*' expression
      Shift derivation
        expression
        ↳ 74: MAX expression
                  ↳ 67: expression • '*' expression
      Reduce derivation
        expression
        ↳ 67: expression             '*' expression
              ↳ 74: MAX expression •

    shift/reduce conflict on token '/':
       74 expression: MAX expression •
       68 expression: expression • '/' expression
      Example: MAX expression • '/' expression
      Shift derivation
        expression
        ↳ 74: MAX expression
                  ↳ 68: expression • '/' expression
      Reduce derivation
        expression
        ↳ 68: expression             '/' expression
              ↳ 74: MAX expression •



State 79

   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression
   75           | MIN expression •

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    '+'       [reduce using rule 75 (expression)]
    '-'       [reduce using rule 75 (expression)]
    '*'       [reduce using rule 75 (expression)]
    '/'       [reduce using rule 75 (expression)]
    $default  reduce using rule 75 (expression)

    shift/reduce conflict on token '+':
       75 expression: MIN expression •
       65 expression: expression • '+' expression
      Example: MIN expression • '+' expression
      Shift derivation
        expression
        ↳ 75: MIN expression
                  ↳ 65: expression • '+' expression
      Reduce derivation
        expression
        ↳ 65: expression             '+' expression
              ↳ 75: MIN expression •

    shift/reduce conflict on token '-':
       75 expression: MIN expression •
       66 expression: expression • '-' expression
      Example: MIN expression • '-' expression
      Shift derivation
        expression
        ↳ 75: MIN expression
                  ↳ 66: expression • '-' expression
      Reduce derivation
        expression
        ↳ 66: expression             '-' expression
              ↳ 75: MIN expression •

    shift/reduce conflict on token '*':
       75 expression: MIN expression •
       67 expression: expression • '*' expression
      Example: MIN expression • '*' expression
      Shift derivation
        expression
        ↳ 75: MIN expression
                  ↳ 67: expression • '*' expression
      Reduce derivation
        expression
        ↳ 67: expression             '*' expression
              ↳ 75: MIN expression •

    shift/reduce conflict on token '/':
       75 expression: MIN expression •
       68 expression: expression • '/' expression
      Example: MIN expression • '/' expression
      Shift derivation
        expression
        ↳ 75: MIN expression
                  ↳ 68: expression • '/' expression
      Reduce derivation
        expression
        ↳ 68: expression             '/' expression
              ↳ 75: MIN expression •



State 80

   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression
   76           | AVG expression •

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    '+'       [reduce using rule 76 (expression)]
    '-'       [reduce using rule 76 (expression)]
    '*'       [reduce using rule 76 (expression)]
    '/'       [reduce using rule 76 (expression)]
    $default  reduce using rule 76 (expression)

    shift/reduce conflict on token '+':
       76 expression: AVG expression •
       65 expression: expression • '+' expression
      Example: AVG expression • '+' expression
      Shift derivation
        expression
        ↳ 76: AVG expression
                  ↳ 65: expression • '+' expression
      Reduce derivation
        expression
        ↳ 65: expression             '+' expression
              ↳ 76: AVG expression •

    shift/reduce conflict on token '-':
       76 expression: AVG expression •
       66 expression: expression • '-' expression
      Example: AVG expression • '-' expression
      Shift derivation
        expression
        ↳ 76: AVG expression
                  ↳ 66: expression • '-' expression
      Reduce derivation
        expression
        ↳ 66: expression             '-' expression
              ↳ 76: AVG expression •

    shift/reduce conflict on token '*':
       76 expression: AVG expression •
       67 expression: expression • '*' expression
      Example: AVG expression • '*' expression
      Shift derivation
        expression
        ↳ 76: AVG expression
                  ↳ 67: expression • '*' expression
      Reduce derivation
        expression
        ↳ 67: expression             '*' expression
              ↳ 76: AVG expression •

    shift/reduce conflict on token '/':
       76 expression: AVG expression •
       68 expression: expression • '/' expression
      Example: AVG expression • '/' expression
      Shift derivation
        expression
        ↳ 76: AVG expression
                  ↳ 68: expression • '/' expression
      Reduce derivation
        expression
        ↳ 68: expression             '/' expression
              ↳ 76: AVG expression •



State 81

   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression
   77           | COUNT expression •

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    '+'       [reduce using rule 77 (expression)]
    '-'       [reduce using rule 77 (expression)]
    '*'       [reduce using rule 77 (expression)]
    '/'       [reduce using rule 77 (expression)]
    $default  reduce using rule 77 (expression)

    shift/reduce conflict on token '+':
       77 expression: COUNT expression •
       65 expression: expression • '+' expression
      Example: COUNT expression • '+' expression
      Shift derivation
        expression
        ↳ 77: COUNT expression
                    ↳ 65: expression • '+' expression
      Reduce derivation
        expression
        ↳ 65: expression               '+' expression
              ↳ 77: COUNT expression •

    shift/reduce conflict on token '-':
       77 expression: COUNT expression •
       66 expression: expression • '-' expression
      Example: COUNT expression • '-' expression
      Shift derivation
        expression
        ↳ 77: COUNT expression
                    ↳ 66: expression • '-' expression
      Reduce derivation
        expression
        ↳ 66: expression               '-' expression
              ↳ 77: COUNT expression •

    shift/reduce conflict on token '*':
       77 expression: COUNT expression •
       67 expression: expression • '*' expression
      Example: COUNT expression • '*' expression
      Shift derivation
        expression
        ↳ 77: COUNT expression
                    ↳ 67: expression • '*' expression
      Reduce derivation
        expression
        ↳ 67: expression               '*' expression
              ↳ 77: COUNT expression •

    shift/reduce conflict on token '/':
       77 expression: COUNT expression •
       68 expression: expression • '/' expression
      Example: COUNT expression • '/' expression
      Shift derivation
        expression
        ↳ 77: COUNT expression
                    ↳ 68: expression • '/' expression
      Reduce derivation
        expression
        ↳ 68: expression               '/' expression
              ↳ 77: COUNT expression •



State 82

   65 expression: expression • '+' expression
   66           | expression • '-' expression
   67           | expression • '*' expression
   68           | expression • '/' expression
   78           | SUM expression •

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90

    '+'       [reduce using rule 78 (expression)]
    '-'       [reduce using rule 78 (expression)]
    '*'       [reduce using rule 78 (expression)]
    '/'       [reduce using rule 78 (expression)]
    $default  reduce using rule 78 (expression)
